--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body{
     background: #56baed;
 }
 
-.select-box, .play-board{
+.select-box, .play-board, .result-box{
     position: absolute;
     top: 50%;
     left: 50%;
@@ -26,7 +26,13 @@ body{
     border-radius: 5px;
     max-width: 330px;
     width: 100%;
-    display: none;
+    transition: all 0.3s ease;
+    /* display: none; */
+}
+.select-box .hide{
+    opacity: 0;
+    pointer-events: none;
+    transform: translate(-50%,-50%) scale(0.9)
 }
 
 .select-box header{
@@ -62,7 +68,8 @@ body{
     transition: all 0.3s ease;
 } 
 
-.options button:hover{
+.options button:hover,
+.result-box .btn button:hover{
     transform: scale(0.96);
 }
 
@@ -72,6 +79,11 @@ body{
 
 .options button.playerO{
     margin-left: 5px;
+}
+
+
+.play-board {
+display: none;
 }
 
 .play-board .details{
@@ -134,4 +146,43 @@ color: #fff;
     text-align: center;
     line-height: 80px;
     color: #56baed;
+}
+
+.result-box{
+    background: #fff;
+    padding: 20px;
+    border-radius: 5px;
+    max-width: 350px;
+    width: 100%;
+    display: none;
+
+}
+.result-box .won-text{
+    font-size: 25px;
+    font-weight: 500;
+    display: flex;
+    justify-content: center;
+}
+.result-box .won-text p{
+    font-weight: 700;
+    margin: 0 3px;
+}
+
+.result-box .btn{
+    display: flex;
+    margin-top: 20px;
+    justify-content: center;
+}
+
+.result-box .btn button{
+    font-size: 18px;
+    font-weight: 500;
+    padding: 8px 20px;
+    border: none;
+    outline: none;
+    background: #56baed;
+    border-radius: 5px;
+    color: #fff;
+    cursor: pointer;
+    transition: all 0.3s ease;
 }
